怪物数值填写

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 
 .idea/
 Gbit-GameJam/UserSettings/Layouts/default-2021.dwlt
+Gbit-GameJam/UserSettings/Layouts/default-2021.dwlt
